[project]
name = "geraipi"
version = "0.1.0"
description = "Project Blockchain Marketplace"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "celery>=5.4.0",
    "deep-translator>=1.11.4",
    "django-ckeditor>=6.7.1",
    "django-cors-headers>=4.4.0",
    "django-filter>=24.3",
    "django-import-export>=4.1.1",
    "django-jazzmin>=3.0.0",
    "django-loginas>=0.3.11",
    "django-resized>=1.0.2",
    "django-solo>=2.3.0",
    "django-tailwind>=3.8.0",
    "django==5.0",
    "djangorestframework>=3.15.2",
    "firebase-admin>=6.5.0",
    "mysqlclient>=2.2.4",
    "pillow>=10.4.0",
    "pip>=24.2",
    "python-dotenv>=1.0.1",
    "stellar-sdk>=11.0.0",
]

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "django-extensions>=3.2.3",
    "django-webpack-loader>=3.1.1",
    "flake8>=7.1.1",
    "isort>=5.13.2",
]
